log where things are

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -151,23 +151,26 @@ jobs:
               wget \
               zlib1g-dev
 
+          # Add the public key for the llvm repository to get the correct clang version
           bash -c 'wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|apt-key add -'
           apt-add-repository -y 'deb http://apt.llvm.org/focal/ llvm-toolchain-focal-15 main'
+          which sudo
+          which cmake
+          which curl
 
-          cat /etc/os-release
-          lsb_release -a
-          #apt-get update
           #apt-get list libasl-dev
           #apt-get -y --no-install-recommends install cmake build-essential libabsl-dev libboost-all-dev libgrpc++-dev libprotobuf-dev libxtensor-dev
+          
           # Add public key and repository to get cmake 3.25+
           wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - > /usr/share/keyrings/kitware-archive-keyring.gpg
           echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ focal main' > /etc/apt/sources.list.d/kitware.list
+
           apt-get update
           apt-get -y --no-install-recommends install -t llvm-toolchain-focal-15 clang-15 clang-tidy-15
-
           apt-get -y install cmake
+          which cmake
+
           cmake --version
-          echo "cmake version is ${cmake --version}"
 
           apt-get -y --no-install-recommends install build-essential libboost-all-dev libgrpc++-dev libprotobuf-dev
           apt-get -y --no-install-recommends install pkg-config ninja-build protobuf-compiler-grpc
