--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,6 +73,7 @@ jobs:
           ref: ${{ needs.prepare.outputs.sha }}
       - name: Install dependencies
         run: |
+          cat /etc/os-release
           brew install abseil cmake boost grpc protobuf xtensor
           brew install pkg-config ninja buf
       - name: Setup build directory
@@ -102,6 +103,96 @@ jobs:
           name: builds
           path: builds
 
+  build_aarch_linux:
+    if: github.repository_owner == 'viamrobotics'
+    needs: [prepare]
+    runs-on: [buildjet-8vcpu-ubuntu-2204-arm]
+    strategy:
+      fail-fast: false
+      - name: Checkout Code
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ needs.prepare.outputs.sha }}
+      - name: Install dependencies
+        run: |
+          apt-get update
+          apt-get -y dist-upgrade
+          apt-get -y --no-install-recommends install \
+              build-essential \
+              ca-certificates \
+              curl \
+              doxygen \
+              g++ \
+              gdb \
+              git \
+              gnupg \
+              gpg \
+              less \
+              libboost-all-dev \
+              libc-ares-dev \
+              libre2-dev \
+              libssl-dev \
+              ninja-build \
+              pkg-config \
+              software-properties-common \
+              sudo \
+              wget \
+              zlib1g-dev
+
+          # Add the public key for the llvm repository to get the correct clang version
+          bash -c 'wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|apt-key add -'
+          apt-add-repository -y 'deb http://apt.llvm.org/focal/ llvm-toolchain-focal-15 main'
+
+          # Add public key and repository to get cmake 3.25+
+          wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - > /usr/share/keyrings/kitware-archive-keyring.gpg
+          echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ focal main' > /etc/apt/sources.list.d/kitware.list
+
+          apt-get update
+          apt-get -y --no-install-recommends install -t llvm-toolchain-focal-15 clang-15 clang-tidy-15
+          apt-get -y install cmake
+
+          mkdir -p ${HOME}/opt/src
+          cd ${HOME}/opt/src && \
+            git clone --recurse-submodules -b v1.52.0 --depth 1 --shallow-submodules https://github.com/grpc/grpc && \
+            cd grpc && \
+            mkdir -p build && \
+            cd build && \
+            cmake .. -G Ninja \
+                -DgRPC_ZLIB_PROVIDER=package \
+                -DgRPC_CARES_PROVIDER=package \
+                -DgRPC_RE2_PROVIDER=package \
+                -DgRPC_SSL_PROVIDER=package \
+                -DgRPC_INSTALL=ON \
+                -DgRPC_BUILD_TESTS=OFF \
+                -DBUILD_SHARED_LIBS=ON \
+                -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+                -DCMAKE_INSTALL_PREFIX=/usr/local \
+                -DCMAKE_INSTALL_RPATH=/usr/local/lib && \
+            ninja install && \
+            cd .. && \
+            rm -rf build
+      - name: Setup build directory
+        run: mkdir builds
+      - name: Build
+        shell: bash
+        run: |
+          mkdir build
+          pushd build/
+          /usr/bin/cmake .. -G Ninja
+          ninja all && ninja install
+          popd
+      - name: Copy
+        run: |
+          ls build/install/lib/
+          cp build/install/lib/libviam_rust_utils.a builds/libviam_rust_utils-${{ matrix.platform }}.a
+          cp build/install/lib/libviamapi.so.${{ needs.prepare.outputs.version }} builds/libviamapi-${{ matrix.platform }}.so
+          cp build/install/lib/libviamsdk.so.${{ needs.prepare.outputs.version }} builds/libviamsdk-${{ matrix.platform }}.so
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: builds
+          path: builds
+
   build_linux:
     if: github.repository_owner == 'viamrobotics'
     needs: [prepare]
@@ -118,8 +209,6 @@ jobs:
           - target: arm-unknown-linux-gnueabihf
             platform: linux_armv6l
             image: arm-unknown-linux-gnueabihf:main
-          - target: aarch64-unknown-linux-gnu
-            platform: linux_aarch64
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -154,12 +243,6 @@ jobs:
           # Add the public key for the llvm repository to get the correct clang version
           bash -c 'wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|apt-key add -'
           apt-add-repository -y 'deb http://apt.llvm.org/focal/ llvm-toolchain-focal-15 main'
-          which sudo
-          which cmake
-          which curl
-
-          #apt-get list libasl-dev
-          #apt-get -y --no-install-recommends install cmake build-essential libabsl-dev libboost-all-dev libgrpc++-dev libprotobuf-dev libxtensor-dev
 
           # Add public key and repository to get cmake 3.25+
           wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - > /usr/share/keyrings/kitware-archive-keyring.gpg
@@ -168,14 +251,7 @@ jobs:
           apt-get update
           apt-get -y --no-install-recommends install -t llvm-toolchain-focal-15 clang-15 clang-tidy-15
           apt-get -y install cmake
-          which cmake
 
-          /usr/bin/cmake --version
-          #apt-get -y --no-install-recommends install libboost-all-dev libgrpc++-dev libprotobuf-dev
-          #apt-get -y --no-install-recommends install pkg-config ninja-build protobuf-compiler-grpc
-
-          #apt-get -y --no-install-recommends install build-essential libboost-all-dev libgrpc++-dev libprotobuf-dev
-          #apt-get -y --no-install-recommends install pkg-config ninja-build protobuf-compiler-grpc
           mkdir -p ${HOME}/opt/src
           cd ${HOME}/opt/src && \
             git clone --recurse-submodules -b v1.52.0 --depth 1 --shallow-submodules https://github.com/grpc/grpc && \
