--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,6 +109,7 @@ jobs:
     runs-on: [buildjet-8vcpu-ubuntu-2204-arm]
     strategy:
       fail-fast: false
+    steps:
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
