--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -129,49 +129,30 @@ jobs:
               gnupg \
               gpg \
               less \
+              libabsl-dev \
               libboost-all-dev \
-              libc-ares-dev \
-              libre2-dev \
+              libgrpc++-dev \
+              libprotobuf-dev \
               libssl-dev \
               ninja-build \
               pkg-config \
+              protobuf-compiler \
+              protobuf-compiler-grpc \
               software-properties-common \
               sudo \
-              wget \
-              zlib1g-dev
+              wget
 
           # Add the public key for the llvm repository to get the correct clang version
           bash -c 'wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|apt-key add -'
-          apt-add-repository -y 'deb http://apt.llvm.org/focal/ llvm-toolchain-focal-15 main'
+          apt-add-repository -y 'deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-15 main'
 
           # Add public key and repository to get cmake 3.25+
           wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - > /usr/share/keyrings/kitware-archive-keyring.gpg
-          echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ focal main' > /etc/apt/sources.list.d/kitware.list
+          echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ jammy main' > /etc/apt/sources.list.d/kitware.list
 
           apt-get update
-          apt-get -y --no-install-recommends install -t llvm-toolchain-focal-15 clang-15 clang-tidy-15
+          apt-get -y --no-install-recommends install -t llvm-toolchain-jammy-15 clang-15 clang-tidy-15
           apt-get -y install cmake
-
-          mkdir -p ${HOME}/opt/src
-          cd ${HOME}/opt/src && \
-            git clone --recurse-submodules -b v1.52.0 --depth 1 --shallow-submodules https://github.com/grpc/grpc && \
-            cd grpc && \
-            mkdir -p build && \
-            cd build && \
-            cmake .. -G Ninja \
-                -DgRPC_ZLIB_PROVIDER=package \
-                -DgRPC_CARES_PROVIDER=package \
-                -DgRPC_RE2_PROVIDER=package \
-                -DgRPC_SSL_PROVIDER=package \
-                -DgRPC_INSTALL=ON \
-                -DgRPC_BUILD_TESTS=OFF \
-                -DBUILD_SHARED_LIBS=ON \
-                -DCMAKE_BUILD_TYPE=RelWithDebInfo \
-                -DCMAKE_INSTALL_PREFIX=/usr/local \
-                -DCMAKE_INSTALL_RPATH=/usr/local/lib && \
-            ninja install && \
-            cd .. && \
-            rm -rf build
       - name: Setup build directory
         run: mkdir builds
       - name: Build
@@ -184,6 +165,7 @@ jobs:
           popd
       - name: Copy
         run: |
+          # CR erodkin: delete me
           ls build/install/lib/
           cp build/install/lib/libviam_rust_utils.a builds/libviam_rust_utils-${{ matrix.platform }}.a
           cp build/install/lib/libviamapi.so.${{ needs.prepare.outputs.version }} builds/libviamapi-${{ matrix.platform }}.so
