--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -145,11 +145,13 @@ jobs:
           # Add the public key for the llvm repository to get the correct clang version
           bash -c 'sudo wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|apt-key add -'
           sudo apt-add-repository -y 'deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-15 main'
+          echo "added llvm"
 
           # Add public key and repository to get cmake 3.25+
           sudo wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | sudo gpg --dearmor - > /usr/share/keyrings/kitware-archive-keyring.gpg
+          echo "got cmake thing"
           sudo echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ jammy main' > /etc/apt/sources.list.d/kitware.list
-
+          echo "installed cmake thing"
           sudo apt-get update
           sudo apt-get -y --no-install-recommends install -t llvm-toolchain-jammy-15 clang-15 clang-tidy-15
           sudo apt-get -y install cmake
