--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,6 +106,8 @@ jobs:
     if: github.repository_owner == 'viamrobotics'
     needs: [prepare]
     runs-on: [buildjet-8vcpu-ubuntu-2204-arm]
+    container:
+      image: ghcr.io/dockcross/linux-arm64
     strategy:
       fail-fast: false
     steps:
