--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,8 +106,9 @@ jobs:
     if: github.repository_owner == 'viamrobotics'
     needs: [prepare]
     runs-on: [buildjet-8vcpu-ubuntu-2204-arm]
+    target: aarch64-unknown-linux-gnu
     container:
-      image: ghcr.io/dockcross/linux-arm64
+      image: ghcr.io/cross-rs/ubuntu:20.04
     strategy:
       fail-fast: false
     steps:
