--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -114,7 +114,7 @@ jobs:
         include:
           - target: aarch64-unknown-linux-gnu
             platform: linux_aarch64
-            image: ghcr.io/cross-rs/ubuntu:20.04
+            image: ghcr.io/cross-rs/aarch64-unknown-linux-gnu:ubuntu:20.04
             runs-on: buildjet-8vcpu-ubuntu-2204-arm
     steps:
       - name: Checkout Code
