--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,17 +105,9 @@ jobs:
   build_aarch_linux:
     if: github.repository_owner == 'viamrobotics'
     needs: [prepare]
-    runs-on: ${{ matrix.runs-on }}
-    container:
-      image: ${{ matrix.image }}
+    runs-on: buildjet-8vcpu-ubuntu-2204-arm
     strategy:
       fail-fast: false
-      matrix:
-        include:
-          - target: aarch64-unknown-linux-gnu
-            platform: linux_aarch64
-            image: ubuntu:20.04
-            runs-on: buildjet-8vcpu-ubuntu-2204-arm
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -168,15 +160,15 @@ jobs:
           mkdir build
           pushd build/
           /usr/bin/cmake .. -G Ninja
-          ninja all && ninja install
+          ninja all -j 3 && ninja install
           popd
       - name: Copy
         run: |
           # CR erodkin: delete me
           ls build/install/lib/
-          cp build/install/lib/libviam_rust_utils.a builds/libviam_rust_utils-${{ matrix.platform }}.a
-          cp build/install/lib/libviamapi.so.${{ needs.prepare.outputs.version }} builds/libviamapi-${{ matrix.platform }}.so
-          cp build/install/lib/libviamsdk.so.${{ needs.prepare.outputs.version }} builds/libviamsdk-${{ matrix.platform }}.so
+          cp build/install/lib/libviam_rust_utils.a builds/libviam_rust_utils-linux_aarch64.a
+          cp build/install/lib/libviamapi.so.${{ needs.prepare.outputs.version }} builds/libviamapi-linux_aarch64.so
+          cp build/install/lib/libviamsdk.so.${{ needs.prepare.outputs.version }} builds/libviamsdk-linux_aarch64.so
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
