--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -216,7 +216,7 @@ jobs:
         run: |
           apt-get update
           apt-get -y dist-upgrade
-          apt-get -y --no-install-recommends install \
+          DEBIAN_FRONTEND=noninteractive apt-get -y --no-install-recommends install \
               build-essential \
               ca-certificates \
               curl \
