--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,8 @@
 name: Build + draft release
 
+# CR erodkin: delete me before merging
+on: pull_request
+
 # (erodkin) this is needed to create the release, per https://github.com/softprops/action-gh-release/issues/236
 permissions:
   contents: write
@@ -83,10 +86,8 @@ jobs:
         run: |
           export BUF_CONFIG_DIR=$(mktemp -d)
           mkdir build
-          pushd build/
-          cmake .. -G Ninja
-          ninja all && ninja install
-          popd
+          cmake -S . -B build -G Ninja
+          cmake --build build --target all install -- -v
 
       - name: Copy
         run: |
@@ -95,8 +96,8 @@ jobs:
           cp build/install/lib/libviamapi.${{ needs.prepare.outputs.version }}.dylib builds/libviamapi-${{ matrix.platform }}.dylib
       - name: Correct install path
         run: |
-          install_name_tool -id "@rpath/libviamsdk.dylib" builds/libviamsdk-${{ matrix.platform }}.dylib
-          install_name_tool -id "@rpath/libviamapi.dylib" builds/libviamapi-${{ matrix.platform }}.dylib
+          cmake --install build --prefix builds/libviamsdk-${{ matrix.platform }}
+          cmake --install build --prefix builds/libviamapi-${{ matrix.platform }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
@@ -198,16 +199,18 @@ jobs:
         shell: bash
         run: |
           mkdir build
-          pushd build/
-          /usr/bin/cmake .. -G Ninja
-          ninja all -j 3 && ninja install
-          popd
+          cmake -S . -B build -G Ninja
+          cmake --build build --target all install -- -v -j 3
 
       - name: Copy
         run: |
           cp build/install/lib/libviam_rust_utils.a builds/libviam_rust_utils-${{ matrix.platform }}.a
           cp build/install/lib/libviamapi.so.${{ needs.prepare.outputs.version }} builds/libviamapi-${{ matrix.platform }}.so
           cp build/install/lib/libviamsdk.so.${{ needs.prepare.outputs.version }} builds/libviamsdk-${{ matrix.platform }}.so
+      - name: Correct install path
+        run: |
+          cmake --install build --prefix builds/libviamsdk-${{ matrix.platform }}
+          cmake --install build --prefix builds/libviamapi-${{ matrix.platform }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
